syntax = "proto3";
package pattern;

option csharp_namespace = "SM.Service";

message GetPatternOwner {
    string request_id = 1;
    string pattern_id = 2;
}
