syntax = "proto3";
package pattern;

option csharp_namespace = "SM.Service";
import public "Command.proto";

message BackstitchUpdated {
    string source_id = 1;
    repeated BackstitchCoordinates backstitches = 2;
    bool marked = 3;
}
