syntax = "proto3";
package pattern;

option csharp_namespace = "SM.Service";

message CreatePattern {
    string id = 1;
    string file_name = 2;
    bytes content = 3;
    string owner_id = 4;
}
