syntax = "proto3";
package pattern;

option csharp_namespace = "SM.Service";
import public "Pattern.proto";

message GetThumbnail {
    string id = 1;
    int32 width = 2;
    int32 height = 3;
    Pattern pattern = 4;
}
