syntax = "proto3";
package pattern;

option csharp_namespace = "SM.Service";
import public "Command.proto";

message StitchUpdated {
    string source_id = 1;
    repeated StitchCoordinates stitches = 2;
    bool marked = 3;
}
